--- a/leaflet-maps.html
+++ b/leaflet-maps.html
@@ -1,30 +1,297 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-<link rel="stylesheet"
-	href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<style type="text/css">
-#map {
-	height: 180px;
-}
-</style>
+  <meta charset="UTF-8">
+  <title>Insert title here</title>
+  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+  <style type="text/css">
+    #map {
+      height: 180px;
+    }
+  </style>
 </head>
+
 <body>
-	<div id="map"></div>
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-	<script>
-		var map = L.map('map').setView([ 51.505, -0.09 ], 13);
-		L
-				.tileLayer(
-						'https://api.tiles.mapbox.com/v4/{id}/{z}/{x}/{y}.png?access_token={accessToken}',
-						{
-							attribution : 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-							maxZoom : 18,
-							id : 'your.mapbox.project.id',
-							accessToken : 'your.mapbox.public.access.token'
-						}).addTo(map);
-	</script>
+  <h1>
+    Search results
+  </h1>
+  <div class="row">
+    <div class="col-sm-8 col-md-9">
+      <div class="pcg-rte-wrapper">
+        <div id="engage">
+          <div class="clear">
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Lead Case Co-ordinator (Independent Provision)</h2>
+            <span class="hide" title="Result Number 1"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Gloucester
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £34,106.00 -  £41,846.00 <br />
+
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                An opportunity has arisen for an experienced caseworking lead professional to work within the educat...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl00_jobTitleLink" title="Read more on this Lead Case Co-ordinator (Independent Provision) application" href="/pages/job_search_view.aspx?jobId=2768&amp;JobIndex=1&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Lead Case Co-ordinator (Independent Provision) ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">07 June 2018&nbsp;</span>
+              </div>
+
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">25 June 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Adoption Team Manager (Social Work)</h2>
+            <span class="hide" title="Result Number 2"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Gloucester
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £42,806.00 -  £44,697.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                Have you got management experience and are looking for a fresh challenge in your career? Are you pas...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl01_jobTitleLink" title="Read more on this Adoption Team Manager (Social Work) application" href="/pages/job_search_view.aspx?jobId=2762&amp;JobIndex=2&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Adoption Team Manager (Social Work) ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">05 June 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">24 June 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Lead Commissioner (Children and Families)</h2>
+            <span class="hide" title="Result Number 3"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Gloucester
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £0.00 -  £0.00 <br />
+                                £61,844 - £68,604
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                A new opportunity has arisen for a Lead Commissioner to join our Children and Families&rsquo; Commis...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl02_jobTitleLink" title="Read more on this Lead Commissioner (Children and Families) application" href="/pages/job_search_view.aspx?jobId=2752&amp;JobIndex=3&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Lead Commissioner (Children and Families) ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">01 June 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">22 June 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Children’s Social Worker / Senior Social Worker</h2>
+            <span class="hide" title="Result Number 4"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Various
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £29,055.00 -  £38,052.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                 Locations: Gloucester, Cheltenham, Forest of Dean, Stroud, Tewkesbury &amp; CirencesterTeams: We ha...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl03_jobTitleLink" title="Read more on this Children’s Social Worker / Senior Social Worker application" href="/pages/job_search_view.aspx?jobId=2614&amp;JobIndex=4&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Children’s Social Worker / Senior Social Worker ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">31 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">01 July 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Commissioning Officer</h2>
+            <span class="hide" title="Result Number 5"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Gloucester
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £30,756.00 -  £38,052.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                We are delighted to advertise a Commissioning Officer role.We work very closely with our partners ac...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl04_jobTitleLink" title="Read more on this Commissioning Officer application" href="/pages/job_search_view.aspx?jobId=2747&amp;JobIndex=5&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Commissioning Officer ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">29 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">12 June 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Outcome Manager</h2>
+            <span class="hide" title="Result Number 6"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Gloucester
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £43,629.00 -  £46,917.00 <br />
+
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                 We are delighted to advertise an Outcome Manager role to ensure the services we commission to suppo...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl05_jobTitleLink" title="Read more on this Outcome Manager application" href="/pages/job_search_view.aspx?jobId=2741&amp;JobIndex=6&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Outcome Manager ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">25 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">15 June 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Children's Assessment Team Manager</h2>
+            <span class="hide" title="Result Number 7"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Various
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £41,967.00 -  £43,821.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                Salary: &pound;41,967 - &pound;43,821Location: Various in GloucestershireWorking hours: 37 hours or ...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl06_jobTitleLink" title="Read more on this Children's Assessment Team Manager application" href="/pages/job_search_view.aspx?jobId=2742&amp;JobIndex=7&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Children's Assessment Team Manager ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">25 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">01 July 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Children's Safeguarding Team Manager</h2>
+            <span class="hide" title="Result Number 8"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Various
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £41,967.00 -  £43,821.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                Salary: &pound;41,967 - &pound;43,821Location: Various in GloucestershireWorking hours: 37 hours or ...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl07_jobTitleLink" title="Read more on this Children's Safeguarding Team Manager application" href="/pages/job_search_view.aspx?jobId=2743&amp;JobIndex=8&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Children's Safeguarding Team Manager ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">25 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">01 July 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Newly Qualified Social Worker (ASYE) - Children’s Social Care</h2>
+            <span class="hide" title="Result Number 9"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Various
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £25,951.00 -  £31,601.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                Teams: We have vacancies in our assessment, safeguarding &amp; permanency teams Have you recently co...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl08_jobTitleLink" title="Read more on this Newly Qualified Social Worker (ASYE) - Children’s Social Care application" href="/pages/job_search_view.aspx?jobId=2744&amp;JobIndex=9&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Newly Qualified Social Worker (ASYE) - Children’s Social Care ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">25 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">01 July 2018 at midnight</span>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+          <div class="DivJobResult">
+            <h2 class="jobtitle">Children's Advanced Practitioner</h2>
+            <span class="hide" title="Result Number 10"></span>
+            <div class="JobResultInner">
+              <p><span title="Where this job is located">
+                                Various
+                                &nbsp; </span></p>
+              <p><span title="The salary offered for this job">
+                                      £38,237.00 -  £41,025.00 <br />
+                                &nbsp; </span></p>
+              <span title="A brief description of this job">
+                                Location: Various in GloucestershireTeams: We have vacancies in our assessment, safeguarding &amp; p...
+                                &nbsp; ...
+                                    </span>
+              <p><a id="ctl00_mainContent_ctrlPagearea_rptSearchResults_ctl09_jobTitleLink" title="Read more on this Children's Advanced Practitioner application" href="/pages/job_search_view.aspx?jobId=2745&amp;JobIndex=10&amp;categoryList=&amp;minsal=0&amp;maxsal=150000&amp;workingPatternList=&amp;services=42&amp;keywords=&amp;PageIndex=1&amp;Number=14">Read More [ Children's Advanced Practitioner ]</a></p>
+            </div>
+            <div class="JobDatesInner">
+              <div class="JobDates">
+                Published on <span title="The date the job was posted">25 May 2018&nbsp;</span>
+              </div>
+              <div class="ClosingDates">
+                &nbsp;Closing date <span title="The date the job will close">01 July 2018 at midnight</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
