--- a/OpenPublic.html
+++ b/OpenPublic.html
@@ -402,14 +402,13 @@
                                             <tbody>
                                               <tr>
                                                 <td style="vertical-align: top;" align="left"><img unselectable="on" class="gwt-Image" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAASCAYAAABWzo5XAAAAH0lEQVR42mNgGAUkgYaGhv+k4oF30WgYjYbRKCALAACpf45IWoKkygAAAABJRU5ErkJggg==" height="18" width="18"></td>
-                                                <td
-                                                  style="vertical-align: top;" align="left">
+                                                <td style="vertical-align: top;" align="left">
                                                   <div unselectable="on" class="GCBIPT2BEDE GCBIPT2BMBC"></div>
-                                      </td>
-                                      </tr>
-                                      </tbody>
-                                      </table>
-                                      </div>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                        </div>
                                       </td>
                                       <td style="vertical-align: top;" align="left">
                                         <div unselectable="on" class="GCBIPT2BDDE"></div>
